[tool.poetry]
name = "jobs"
version = "0.1.0"
description = "An API providing a service that manages job postings."
authors = ["Flavio Alles <flavio.alles@proton.me>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
